Qt Charts Dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,8 +81,9 @@ ign_find_package (Qt5
     Core
     Quick
     QuickControls2
+    Widgets
   REQUIRED
-  PKGCONFIG "Qt5Core Qt5Quick Qt5QuickControls2"
+  PKGCONFIG "Qt5Core Qt5Quick Qt5QuickControls2 Qt5Widgets"
 )
 
 #--------------------------------------
