Topic Viewer plugin, list all transport topics and make plottable fields draggable
Signed-off-by: AmrElsersy <amrelsersay@gmail.com>

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -107,5 +107,6 @@ add_subdirectory(image_display)
 add_subdirectory(publisher)
 add_subdirectory(scene3d)
 add_subdirectory(topic_echo)
+add_subdirectory(topic_viewer)
 add_subdirectory(world_control)
 add_subdirectory(world_stats)
