add ruby scripts
Signed-off-by: John Shepherd <john@openrobotics.org>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,6 +10,13 @@ load(
     "//ign_bazel:generate_file.bzl",
     "generate_file",
 )
+load(
+    "@bazelruby_rules_ruby//ruby:defs.bzl",
+    "ruby_binary",
+    "ruby_library",
+    "ruby_test",
+    "ruby_rspec",
+)
 
 package(default_visibility = ["//visibility:public"])
 
@@ -20,6 +27,8 @@ PROJECT_PATCH = 0
 IGN_DESIGNATION = "/tmp"
 CMAKE_INSTALL_PREFIX = "/tmp"
 IGN_LIB_INSTALL_DIR = "/tmp"
+library_location = "/usr"
+IGN_LIBRARY_PATH = "/usr"
 
 # Generates config.hh based on the version numbers in CMake code.
 cmake_configure_file(
@@ -44,6 +53,42 @@ cmake_configure_file(
         "IGN_LIB_INSTALL_DIR=%s" % (IGN_LIB_INSTALL_DIR),
     ],
     visibility = ["//visibility:private"],
+)
+
+cmake_configure_file(
+    name = "yaml",
+    src = "conf/gui.yaml.in",
+    out = "conf/gui.yaml",
+    cmakelists = ["CMakeLists.txt"],
+    defines = [
+        "PROJECT_VERSION_FULL=%d.%d.%d" % (PROJECT_MAJOR, PROJECT_MINOR, PROJECT_PATCH),  # noqa
+        "PROJECT_NAME_NO_VERSION_LOWER=%s" % (PROJECT_NAME),
+        "ign_library_path=%s" % (IGN_LIBRARY_PATH),
+        "PROJECT_NAME_NO_VERSION=%s" % [PROJECT_NAME],
+    ],
+    visibility = ["//visibility:public"],
+)
+
+# Generates config.hh based on the version numbers in CMake code.
+cmake_configure_file(
+    name = "ruby",
+    src = "src/cmd/cmdgui.rb.in",
+    out = "src/cmd/cmdgui.rb",
+    cmakelists = ["CMakeLists.txt"],
+    defines = [
+        "library_location=%s" % [library_location],
+        "PROJECT_VERSION_FULL=%d.%d.%d" % (PROJECT_MAJOR, PROJECT_MINOR, PROJECT_PATCH),  # noqa
+        "IGN_LIBRARY_NAME=%s" % [PROJECT_NAME],
+    ],
+    visibility = ["//visibility:public"],
+)
+
+ruby_binary(
+    name = "gui-ruby",
+    srcs = ["src/cmd/cmdgui.rb"],
+    includes = ["src/cmd"],
+    main = "src/cmd/cmdgui.rb",
+    visibility = ["//visibility:public"],
 )
 
 generate_file(
